[tool.poetry]
name = "ddh"
version = "0.1.0"
description = "Harvest and re-grid data from Thredds for specific area"
authors = ["Gaute Hope <gauteh@met.no>", "Knut-Frode Dagestad <knutfd@met.no>"]

[project.urls]
repository = "http://github.com/gauteh/dnv-data-harvest"

[project.scripts]
"ddh" = "ddh.cli:ddh"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
