[tool.poetry]
name = "hada"
version = "0.1.0"
description = "HArvest and re-grid DAta from Thredds for specific area"
authors = ["Gaute Hope <gauteh@met.no>", "Knut-Frode Dagestad <knutfd@met.no>"]

[project.urls]
repository = "http://github.com/gauteh/hada"

[tool.poetry.scripts]
"hada" = "hada.cli:hada"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
